...
                  decoration: const InputDecoration(
                    labelText: "Email",
                    border: OutlineInputBorder(),
                    fillColor: Colors.white,
                    filled: true,
                  ),
                  key: const ValueKey('email'),
                  keyboardType: TextInputType.emailAddress,
                  controller: _emailController,
                  validator: (value) => Validator.validateEmail(value ?? ""),
                ),
                const SizedBox(
                  height: 10,
...
                  decoration: const InputDecoration(
                    labelText: "Password",
                    border: OutlineInputBorder(),
                    fillColor: Colors.white,
                    filled: true,
                  ),
                  key: const ValueKey('password'),
                  keyboardType: TextInputType.visiblePassword,
                  controller: _passwordController,
                  validator: (value) => Validator.validatePassword(value ?? ""),
                ),
                const SizedBox(
                  height: 25,
...
